[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Interactors/Arm/ActionBIndicator.png" type="Texture" id=1]
[ext_resource path="res://Entities/Interactors/Arm/InteractorArm.gd" type="Script" id=2]
[ext_resource path="res://Entities/Interactors/Arm/Arm.png" type="Texture" id=3]
[ext_resource path="res://Entities/Interactors/Arm/ActionAIndicator.png" type="Texture" id=4]
[ext_resource path="res://Entities/Interactors/Arm/Joint.png" type="Texture" id=5]
[ext_resource path="res://Entities/Interactors/Arm/JointCenter.png" type="Texture" id=6]
[ext_resource path="res://Entities/Interactors/Arm/JointActionAIndicator.png" type="Texture" id=7]
[ext_resource path="res://Entities/Interactors/Arm/JointActionBIndicator.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 96, 16 )

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
flags = 6
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 192, 16 )

[sub_resource type="AtlasTexture" id=3]
resource_local_to_scene = true
flags = 6
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 192, 16 )

[node name="Arm" type="RigidBody2D"]
input_pickable = true
gravity_scale = 0.0
sleeping = true
can_sleep = false
linear_damp = 50.0
angular_damp = 50.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
action_b = 3
arm_length = 3

[node name="ActionAIndicator" type="Sprite" parent="."]
visible = false
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
position = Vector2( 0, -35 )
texture = ExtResource( 4 )

[node name="ActionBIndicator" type="Sprite" parent="."]
visible = false
modulate = Color( 0.541176, 0.788235, 0.14902, 1 )
position = Vector2( 0, 35 )
texture = ExtResource( 1 )

[node name="JointActionAIndicator" type="Sprite" parent="."]
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
position = Vector2( -106, -20 )
texture = ExtResource( 7 )

[node name="JointActionBIndicator" type="Sprite" parent="."]
modulate = Color( 0.541176, 0.788235, 0.14902, 1 )
position = Vector2( -106, 20 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.000211416
shape = SubResource( 1 )

[node name="ArmSpriteA" type="Sprite" parent="."]
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
position = Vector2( 0, -8 )
texture = SubResource( 4 )

[node name="ArmSpriteB" type="Sprite" parent="."]
modulate = Color( 0.541176, 0.788235, 0.14902, 1 )
position = Vector2( 0, 8 )
texture = SubResource( 3 )

[node name="JointSprite" type="Sprite" parent="."]
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
position = Vector2( -96, 0 )
texture = ExtResource( 5 )

[node name="JointCenterSprite" type="Sprite" parent="."]
modulate = Color( 0.541176, 0.788235, 0.14902, 1 )
position = Vector2( -96, 0 )
texture = ExtResource( 6 )
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
